updated run.sh